Made changes related to getting integration testing working