@@ -11,8 +11,8 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.jboss.bqt</groupId>
 	<artifactId>integration</artifactId>
-	<name>Integration Testing</name>
-	<description>Test the distribution kit works</description>
+	<name>BQT Integration Testing</name>
+	<description>Test full integration, issueing queries against a h2 database</description>
 
 	<dependencies>
 		
@@ -105,92 +105,108 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <scope>provided</scope>
-        </dependency>                  
+        </dependency>     
+
+        <dependency>
+  <groupId>org.jboss.teiid</groupId>
+  <artifactId>teiid-client</artifactId>
+  <version>7.7.1</version>
+</dependency>            
                         
 	</dependencies>	
 	
      <profiles>
         <profile>
-          <id>default</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-	<build>
-	  <!-- testResources>
-	    <testResource>
-	      <directory>src/test/resources</directory>
-	      <includes>
-	        <include>log4j.xml</include>
-	      </includes>
-	    </testResource>
-	  </testResources-->
-	  <plugins>
+          <id>integration</id>
+          <properties>
+            <test>TestIntegrationWithLocalDB</test>
+          </properties>
+		  <build>
+	       <plugins>
 	  
-          <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-antrun-plugin</artifactId>
-                 <dependencies>
-                    <dependency>
-                        <groupId>org.apache.ant</groupId>
-                        <artifactId>ant</artifactId>
-                        <version>1.7.0</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>hsqldb</groupId>
-                        <artifactId>hsqldb</artifactId>
-                        <version>${jdbc.hsqldb.version}</version>
-                   </dependency>  
-                    <dependency>
-                       <groupId>com.h2database</groupId>
-                       <artifactId>h2</artifactId>
-                      <version>${jdbc.h2.version}</version>
-                    </dependency>                               
-                 </dependencies>
-                <executions>
-                <execution>
-                    <id>load-database-schema</id>
-                    <phase>generate-sources</phase>
-                    <configuration>
-                        <tasks>
-         
-            <available file="${int.scriptfile}" property="script.file.exist"/>
-            <fail unless="script.file.exist" message="DDL ${int.scriptfile} does not exist" />
-
-            <echo>Loading schema for ${int.url}</echo>
-<!-- 
-rdbms="${rdbms.type}"
--->
-             <sql     driver="${int.driver}"
-                            url="${int.url}"
-                            userid="${int.username}"
-                            password="${int.password}"
-                            src="${int.scriptfile}"
-                         
-                delimiter="${int.delim}"
-                delimitertype="normal"
-                autocommit="true"
-                onerror="stop" >
-                <classpath>
-                    <pathelement path="${maven.runtime.classpath}"/>
-                </classpath>
-             
-
-             </sql> 
-
-                        </tasks>
-                    </configuration>
-                    <goals>
-                        <goal>run</goal>
-                    </goals>
-                </execution>
-              </executions>
-            </plugin>  
-            
-            
-         </plugins>     	  
-	</build>	
-	</profile>
+	          <plugin>
+	                <groupId>org.apache.maven.plugins</groupId>
+	                <artifactId>maven-antrun-plugin</artifactId>
+	                 <dependencies>
+	                    <dependency>
+	                        <groupId>org.apache.ant</groupId>
+	                        <artifactId>ant</artifactId>
+	                        <version>1.7.0</version>
+	                    </dependency>
+	                    <dependency>
+	                        <groupId>hsqldb</groupId>
+	                        <artifactId>hsqldb</artifactId>
+	                        <version>${jdbc.hsqldb.version}</version>
+	                   </dependency>  
+	                    <dependency>
+	                       <groupId>com.h2database</groupId>
+	                       <artifactId>h2</artifactId>
+	                      <version>${jdbc.h2.version}</version>
+	                    </dependency>                               
+	                 </dependencies>
+	                <executions>
+	                <execution>
+	                    <id>load-database-schema</id>
+	                    <phase>generate-sources</phase>
+	                    <configuration>
+	                        <tasks>
+	         
+	            <available file="${int.scriptfile}" property="script.file.exist"/>
+	            <fail unless="script.file.exist" message="DDL ${int.scriptfile} does not exist" />
 	
+	            <echo>Loading schema for ${int.url}</echo>
+	<!-- 
+	rdbms="${rdbms.type}"
+	-->
+					             <sql     driver="${int.driver}"
+					                            url="${int.url}"
+					                            userid="${int.username}"
+					                            password="${int.password}"
+					                            src="${int.scriptfile}"
+					                         
+					                delimiter="${int.delim}"
+					                delimitertype="normal"
+					                autocommit="true"
+					                onerror="stop" >
+					                <classpath>
+					                    <pathelement path="${maven.runtime.classpath}"/>
+					                </classpath>
+					             
+					             </sql> 
+	
+	                        </tasks>
+	                    </configuration>
+	                    <goals>
+	                        <goal>run</goal>
+	                    </goals>
+	                </execution>
+	              </executions>
+	            </plugin>              
+           </plugins>     	  
+	   </build>	
+	</profile>
+	 <profile>
+          <id>dbtest</id>
+          <build>
+          <plugins>
+          <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven.surefire.plugin.version}</version>
+                <configuration>
+                    <includes>
+                        <include>**/TestDBSource.java</include>
+                    </includes>
+                     <systemProperties>
+                        <property>
+                            <name>config</name>
+                            <value>${config}</value>
+                        </property>
+                    </systemProperties>
+                    <argLine>-Xmx256M ${debug.argline} -XX:MaxPermSize=512m</argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+        </build>
+	</profile>
   </profiles>		
-
 </project>
